k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      serviceAccountName: todo-backend-sa
      containers:
        - name: todo-backend
          image: rasikarajgole/todo-backend:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: default
spec:
  selector:
    app: todo-backend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
