k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todo-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
