k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default
spec:
  selector:
    app: todo-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
